ProFit/objects/Event_Organizer__c.object
<CustomObject>
    <description>Event Organizer Object for Pro Fit App</description>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Address</description>
        <inlineHelpText>Address</inlineHelpText>
        <label>Address</label>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Event Organizers</relationshipLabel>
        <relationshipName>Event_Organizers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Email__c</fullName>
        <description>Alternate Email</description>
        <inlineHelpText>Alternate Email</inlineHelpText>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternative_Phone__c</fullName>
        <description>Alternate Contact Number</description>
        <inlineHelpText>Alternate Contact Number</inlineHelpText>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact Phone</description>
        <inlineHelpText>Contact Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Event Organizer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Organizer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>